--- a/css/TOVstyle.css
+++ b/css/TOVstyle.css
@@ -45,10 +45,63 @@ Primary Color: #1AFF00;
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,500'); /* Raleway Font */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans'); /* Open Sans Font */
 @font-face {
-    font-family: 'Anurati';
-    src: url('../fonts/Anurati-Regular.otf');
+    font-family: 'montserrat-reg';
+    src: url('../fonts/Montserrat-Regular.otf');
 }
-
+@font-face {
+    font-family: 'montserrat-bold';
+    src: url('../fonts/Montserrat-SemiBold.otf');
+}
+/* --------------------------- //////////// CAROUSEL   /////////// -------------------------- */
+.carousel {
+    width: 50vw;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+  
+  .carousel_slider {
+    width: 100%;
+    height: 87%;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .content_inner_slider {
+    width: 100%;
+    height: 100%;
+    display: flex;
+  }
+  
+  .img {
+    min-width: 50vw;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .prev_button {
+    left: 0;
+  }
+  
+  .next_button {
+    right: 0;
+  }
+  
+  .dots {
+    display: flex;
+    margin: 1rem 0;
+  }
+  
+  .dot {
+    width: 1rem;
+    height: 1rem;
+    border: 1px solid var(--color-text-light);
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+  }
 /* --------------------------- /////////// I. GENERAL /////////// --------------------------- */
 /* -Color- */
 .colored {
@@ -94,11 +147,11 @@ html, body {
 }
 /* -Text Styling */
 h1,h2,h3,h4,h5,h6 {
-	font-family: Raleway, sans-serif;
+	font-family: montserrat-bold, sans-serif;
 }
 h1 {
     font-size: 2.25rem; /* 36px */
-    font-family: Anurati, sans-serif;
+    font-family: montserrat-bold, sans-serif;
     letter-spacing: 5px;
 } 
 h2 {
@@ -114,7 +167,7 @@ h4 {
     font-weight: 300;
 }
 p {
-    font-family: Open Sans, sans-serif;
+    font-family: montserrat-reg, sans-serif;
     font-size: 0.9375rem; /* 15px */
     padding: 5px 5px 5px 0;
     margin: 0;
@@ -228,7 +281,7 @@ button {
     border: none;
     border-radius: 2px;
     color: #FFF;
-    font-family: Raleway, sans-serif;
+    font-family: montserrat-reg, sans-serif;
     font-weight: 500;
 	display: block;
 	height: auto;
@@ -262,7 +315,7 @@ button {
     position: relative;
     color: #FFF;
     top: 43%;
-    font-family: Anurati, sans-serif;
+    font-family: montserrat-bold, sans-serif;
     letter-spacing: 5px;
 }
 #progress {
@@ -291,7 +344,7 @@ button {
 
 /* --------------------------- /////////// III. HEADER & NAVIGATION /////////// --------------------------- */
 #logo {
-    font-family: Anurati, sans-serif;
+    font-family: montserrat-bold, sans-serif;
     font-size: 1.75rem; /* 28px */;
     letter-spacing: 5px;
 }
@@ -408,7 +461,7 @@ button {
 .game-tags li {
     display: inline;
     margin: 0 0 0 15px;
-    font-family: Raleway, sans-serif;
+    font-family: montserrat-reg, sans-serif;
     font-size:1.10rem; /* 20px */;
     font-weight: 500;
 }
@@ -870,7 +923,7 @@ button {
      margin-top: 18%;
 }
 .text-404 h1 {
-    font-family: Anurati, sans-serif;
+    font-family: montserrat-bold, sans-serif;
     font-size: 4rem;
 }
 .text-404 a {
